--- a/restaurator/package.json
+++ b/restaurator/package.json
@@ -16,6 +16,7 @@
     "express-ejs-layouts": "^2.3.1",
     "express-session": "^1.15.6",
     "mongoose": "^5.0.3",
+    "mongoose-type-email": "^1.0.5",
     "morgan": "~1.9.0",
     "serve-favicon": "~2.4.5"
   }
