--- a/restaurator/package.json
+++ b/restaurator/package.json
@@ -10,12 +10,14 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "~1.18.2",
     "connect-mongo": "^2.0.1",
+    "connect-mongostore": "^0.1.4",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "express": "~4.15.5",
     "express-ejs-layouts": "^2.3.1",
     "express-session": "^1.15.6",
+    "mongodb": "^3.0.2",
     "mongoose": "^5.0.3",
     "mongoose-type-email": "^1.0.5",
     "morgan": "~1.9.0",
