--- a/restaurator/package.json
+++ b/restaurator/package.json
@@ -7,6 +7,7 @@
     "dev": "DEBUG=restaurator:* nodemon ./bin/www"
   },
   "dependencies": {
+    "@google/maps": "^0.4.5",
     "bcryptjs": "^2.4.3",
     "body-parser": "~1.18.2",
     "connect-flash": "^0.1.1",
