--- a/restaurator/package.json
+++ b/restaurator/package.json
@@ -22,6 +22,7 @@
     "flash": "^1.1.0",
     "mongodb": "^3.0.2",
     "mongoose": "^5.0.3",
+    "mongoose-data-seed": "^1.0.4",
     "mongoose-type-email": "^1.0.5",
     "morgan": "~1.9.0",
     "node-json-db": "^0.7.3",
