--- a/restaurator/package.json
+++ b/restaurator/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@google/maps": "^0.4.5",
+    "async": "^2.6.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "~1.18.2",
     "connect-flash": "^0.1.1",
